--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>ma.tiwtiw</groupId>
   <artifactId>translate</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>menu</name>
+  <name>translate</name>
   <description>I18N management</description>
 
   <properties>
